Quartz sync: Dec 6, 2025, 5:20 AM

--- a/content/C_6~7점/마녀 배달부 키키.md
+++ b/content/C_6~7점/마녀 배달부 키키.md
@@ -17,7 +17,7 @@ tags:
 <div style="text-align:center; font-weight: bold; font-size: 1.2rem">
 <br>
 ★★★☆<br><br>
-	<span style="font-style: italic">성장하면서 잃어버리는 것들.</span>
+	<span style="font-style: italic">무언가를 잃는다는 건, 어찌보면 앞으로 나아간다는 것.</span>
 </div>
 
 
