--- a/content/D_5점 이하/날씨의 아이.md
+++ b/content/D_5점 이하/날씨의 아이.md
@@ -17,7 +17,7 @@ tags:
 <div style="text-align:center; font-weight: bold; font-size: 1.2rem">
 <br>
 ★★<br><br>
-	<span style="font-style: italic">이해할 수 없는 자기긍정 이야기.</span>
+	<span style="font-style: italic">이해할 수 없는 자기긍정과 합리화.</span>
 </div>
 
 
